unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/CMPL123CME__Investigation_Items__c.object-meta.xml
<CustomObject>
    <label>Investigation Items</label>
    <nameField>
        <displayFormat>II-{00000}</displayFormat>
        <label>Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>