unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Checkbox_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Checkbox_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Value</label>
        <type>Checkbox</type>
    </CustomField>