unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Comments__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>