unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Date_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </CustomField>