unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Field_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>