unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Investigation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation__c</fullName>
        <label>Parent Investigation</label>
        <referenceTo>CMPL123CME__Investigation__c</referenceTo>
        <relationshipLabel>Investigation Items</relationshipLabel>
        <relationshipName>Investigation_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>