unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Investigation_Comment_Required_Options__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Comment_Required_Options__c</fullName>
        <label>Investigation Comment Required Options</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>