unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Investigation_Step_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Step_Description__c</fullName>
        <label>Step Description</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>