unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Investigation_Template_Item__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Template_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation Template Item</label>
        <referenceTo>CMPL123CME__Investigation_Template_Item__c</referenceTo>
        <relationshipLabel>Investigation Items</relationshipLabel>
        <relationshipName>Investigation_Items</relationshipName>
        <type>Lookup</type>
    </CustomField>