unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Number_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>