unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Row_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Row_No__c</fullName>
        <label>Row No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>