unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/fields/CMPL123CME__Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>