unpackaged/main/default/objects/CMPL123CME__Investigation_Items__c/validationRules/Do_nott_change_Investigation.validationRule-meta.xml
<ValidationRule>
        <fullName>Do_nott_change_Investigation</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( CMPL123CME__Completed__c)</errorConditionFormula>
        <errorMessage>You cannot change investigation Completed Value</errorMessage>
    </ValidationRule>